# book-openers

./: .gitignore  README.md  app.py  pyproject.toml
book_openers/: 1996.txt  book.py  catalogue.txt  epub_reader.py  gutenberg.py  queries.sql  txt_reader.py
tests/: test_book.py  test_gutenberg.py
